--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "node-sass": "^9.0.0",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
+    "react-date-range": "^2.0.1",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
